scad_theme/css/site.css
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 700px;
    /* Margin bottom by footer height */
}

a {
    color: #BD081C;
}

a:hover {
    color: #BD081C;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
}

.carousel-inner {
    max-height: 350px;
    min-height: 350px;
}

.carousel-caption {
    bottom: auto;
    top: 60px;
    text-shadow: 1px 1px 4px #000;
}

.carousel-item img {
    filter: blur(1px);
    z-index: -1;
}

.carousel-item::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
    background-image: url(../images/overlay.png);
}

.slide_readme {
    background: rgba(255, 255, 255, 0.2);
    display: block;
    text-transform: uppercase;
    color: #fff;
    width: 150px;
    border: 1px solid #fff;
    padding: 5px 0px;
    margin: 10px auto;
    font-weight: bold;
    color: #fff!important;
}

#homepage_subheader {
    background: none repeat scroll 0 0 #ED564B;
    border-bottom: 5px solid #F96B61;
    border-top: 5px solid #F96B61;
    padding: 40px 0 20px;
    color: #FFFFFF;
    margin: 0;
}

#homepage_subheader h3 {
    font-weight: normal;
}

#homepage_subheader p,
#homepage_subheader h3 {
    margin: 30px 0 30px 0;
}

#homepage_subheader a {
    color: rgb(0, 128, 128);
}

#homepage_subheader ul {
    text-align: left;
}

footer {
    position: absolute;
    bottom: 0;
}

footer #get_involved {
    color: #606060;
}

footer #ident {
    background-image: url(../images/UolLogo.png);
    background-position: 20px 20px;
    background-repeat: no-repeat;
    background-color: #3b3b3b;
    border-top: 5px solid #ed564b;
    color: #fff;
    padding-top: 130px;
}

footer #copyright {
    height: 60px;
    line-height: 60px;
    padding-left: 20px;
    margin: 0;
    color: #bbb;
    background-color: #292929;
    font-size: small;
}

article {
    padding: 30px 30px 0px;
}

article header h1 {
    font-size: 2em;
    color: #222;
}

article header h2 {
    font-size: 2em;
    color: #222;
    font-style: normal;
}

article header h3 {
    font-size: 1em;
    font-style: italic;
    color: #BD081C;
}

article h1 {
    font-size: 1.5em;
    color: #555;
}

article h2 {
    font-size: 1.3em;
    color: #555;
    font-style: italic;
}

article h3 {
    font-size: 1.2em;
    color: #BD081C;
}

article h4 {
    font-size: 1em;
    color: #777;
}

article h5 {
    font-size: 1em;
    color: #bbb;
    font-style: italic;
}

article section {
    padding: 30px 0;
}

article a.read_more {
    text-decoration: none;
    background-color: #E7E5E3;
    color: #100100;
    padding: 4px 5px;
    border-radius: 4px;
    text-shadow: 1px 1px #fff;
    font-weight: normal;
}

article a.read_more:hover {
    background-color: #D7D5D3;
    color: #100101;
}

blockquote {
    margin: 50px 100px;
    padding: 30px;
    background-color: #eee;
    border-radius: 15px;
}

article {
    width: 100%;
}

article img,
article iframe {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 600px;
    max-width: 100%;
}

#team .row {
    padding: 20px;
}

#team img {
    max-width: 60%;
    height: auto;
    margin: auto;
    display: block;
}

.form-group.required label:after {
    content: "*";
    color: red;
}

#recaptcha_placeholder {
    display: inline-block;
}

